[tool.poetry]
name = "debts"
version = "1.0.0"
description = "The debts management service"
authors = ["Evgeniy Afonasev <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/afonasev/debts"
homepage = "https://pypi.org/project/debts"
keywords = []

[tool.poetry.dependencies]
python = "^3.7"
alembic = "^1.3"
context_logging = "^1.0.0"
contextvars_executor = "^0.0.1"
fastapi = {version = ">=0.18,<=2.0", extras = ["all"]}
passlib = {version = "^1.7", extras = ["bcrypt"]}
psycopg2 = "^2.8"
pyjwt = "^1.7"
sentry-asgi = "^0.2.0"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allows-prereleases = true}
factory_boy = "^2.12"
flake8-awesome = "^1.0"
ipython = "^7.12"
mypy = "^0.750"
pdbpp = "^0.10.2"
pylint = "^2.2"
pytest = "^5.3"
pytest-cov = "^2.8"
pytest-deadfixtures = "^2.1"
pytest-mock = "^1.13"
unify = "^0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
