[tool.poetry]
name = "debts"
version = "1.0.0"
description = "The debts management service"
authors = ["Evgeniy Afonasev <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/afonasev/debts"
homepage = "https://pypi.org/project/debts"
keywords = []

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.0"
context_logging = "^0.2"
contextvars_executor = "^0.0.1"
fastapi = {version = "^0.65", extras = ["all"]}
passlib = {version = "^1.7", extras = ["bcrypt"]}
psycopg2 = "^2.8"
pyjwt = "^1.7"
sentry-asgi = "^0.2"
sqlalchemy = "^1.4"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
factory_boy = "^2.12"
flake8-awesome = "^1.0"
ipython = "^7.18"
mypy = "^0.812"
pdbpp = "^0.10"
pylint = "^2.7"
pytest = "^6.2"
pytest-cov = "^2.6"
pytest-deadfixtures = "^2.2"
pytest-mock = "^1.10"
unify = "^0.4"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
